Clean up `Connector` usages (#90)
* migrate all connector-string uses to Connector enum, and fail early for unsupported connectors

* extra null guards + clean up equals for enums

* unify the parameter checking for jks too

* make empty/null inputs fail earlier

* exception instead of empty return